Fix slider for old version firefox

--- a/src/ideabox/diazotheme/spirit/theme/less/slider.ideabox.less
+++ b/src/ideabox/diazotheme/spirit/theme/less/slider.ideabox.less
@@ -249,27 +249,57 @@ html[xmlns] .flexslider .slides {
     align-items: stretch;
 
     li {
-      background           : #FFF;
-      min-height           : 100%;
-      border               : 1px solid #e6e6e6;
-      overflow             : hidden;
-      margin-top           : 0 !important;
-      position             : relative;
-      display              : grid !important;
-      grid-template-columns: auto;
-      grid-template-rows   : auto;
+      background: #FFF;
+      min-height: 100%;
+      border    : 1px solid #e6e6e6;
+      overflow  : hidden;
+      margin-top: 0 !important;
+      position  : relative;
+
+      &::after {
+        content         : "+";
+        background-color: @spirit-pink;
+        color           : @color-light;
+        font-size       : 2rem;
+        font-weight     : bold;
+        position        : absolute;
+        right           : 1rem;
+        bottom          : -5rem;
+        display         : flex;
+        justify-content : center;
+        align-items     : center;
+        height          : 5rem;
+        width           : 5rem;
+        transition      : bottom 0.5s;
+        z-index         : 1;
+      }
+
+      &:hover,
+      &:active,
+      &:focus {
+        &::after {
+          bottom: 1rem;
+        }
+      }
 
       .Item {
-        grid-row       : 1;
-        grid-column    : 1;
-        //margin-bottom: 9rem;
+        position: absolute;
+        top     : 0;
+        left    : 0;
+        height  : 100%;
+        width   : 100%;
+
+        .image-background {
+          position: absolute;
+          top     : 0;
+          left    : 0;
+        }
       }
 
       .flex-caption {
-        padding      : 0;
-        grid-row     : 1;
-        grid-column  : 1;
-        //transition : transform 0.5s;
+        padding : 0;
+        position: relative;
+        z-index : 1;
 
         &::before {
           display       : block;
@@ -278,31 +308,14 @@ html[xmlns] .flexslider .slides {
           padding-bottom: 60%;
           margin-bottom : 0;
           transition    : margin-bottom 0.5s;
-          min-height    : 9rem;
-        }
-
-        &::after {
-          content           : "+";
-          background-color  : @spirit-pink;
-          color             : @color-light;
-          font-size         : 2rem;
-          font-weight       : bold;
-          position          : absolute;
-          //bottom          : -10rem;
-          right             : 1rem;
-          display           : flex;
-          justify-content   : center;
-          align-items       : center;
-          height            : 5rem;
-          width             : 5rem;
-          transition        : bottom 0.5s;
+          min-height    : 15rem;
         }
 
         .flex-caption-inner {
           height          : 100%;
           padding         : 2rem 2rem 4rem 2rem;
           background-color: @color-light;
-          margin-bottom   : -9rem;
+          margin-bottom   : -15rem;
           margin-top      : 0;
           transition      : margin-bottom 0.5s;
 
@@ -338,12 +351,12 @@ html[xmlns] .flexslider .slides {
         content         : " ";
         display         : block;
         position        : absolute;
-        height          : 9rem;
+        height          : 15rem;
         bottom          : 0;
         left            : 0;
         background-image: linear-gradient(transparent 30%, white 80%);
         width           : 100%;
-        z-index         : 1;
+        z-index         : 2;
       }
 
       &:hover,
@@ -356,11 +369,7 @@ html[xmlns] .flexslider .slides {
           }
 
           &::before {
-            margin-bottom: -9rem;
-          }
-
-          &::after {
-            bottom: 1rem;
+            margin-bottom: -15rem;
           }
         }
 
@@ -531,29 +540,6 @@ html[xmlns] .flexslider .slides {
 
     &+.align-right {
       display: none;
-    }
-  }
-}
-
-@media (max-width: 992px) {
-  .slider-multiple .carousel.flexslider ul.slides li {
-    display       : flex !important;
-    flex-direction: column;
-
-    &::before {
-      display: none;
-    }
-
-    .flex-caption {
-
-      .flex-caption-inner {
-        margin-bottom: 0;
-      }
-
-      &::before,
-      &::after {
-        display: none;
-      }
     }
   }
 }
